# ms-teams-ws

./: .drone.jsonnet  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: lib.rs  messages.rs  types.rs
