[package]
name = "software-library-teams-ws"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.31"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive", "serde_derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["time"] }
tokio-tungstenite = "0.24.0"
tungstenite = "0.24.0"
url = "2.5.4"

[dev-dependencies]
rand = "0.8.5"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread"] }
