[package]
name = "ms-teams-ws"
version = "0.2.6"
edition = "2021"
authors = ["Matthias Bilger <matthias@bilger.info>"]
license = "MIT"
description = "A library to communicate to the local teams websocket for mute/unmute and more functions during meetings"
homepage = "https://m42e.de/"
repository = "https://github.com/m42e/ms-teams-ws"

[dependencies]
futures-util = "0.3.31"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive", "serde_derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1"}
tokio-tungstenite = "0.24.0"
tungstenite = "0.24.0"
url = "2.5.4"

[dev-dependencies]
rand = "0.8.5"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread"] }
